# modelplot

./: README.md  pyproject.toml
src/: modelplot1f.py  modelplot1p.py  modelplot2f.py  modelplot2p.py  modelplot3f.py  modelplot3p.py
